# karlovic

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml  publish.yml
karlovic/: __init__.py  api.py  middleware.py  model_server.py  request_logger.py
karlovic/forms/: use_image_form.py
karlovic/plugins/: CudaDevicePlugin.py  ImagePlugin.py  ImageToFeaturesPlugin.py  ModelPlugin.py  __init__.py  ensure_nonconflicting_plugins.py
