[metadata]
name = karlovic
author = "Aiwizo"
author-email = filip@aiwizo.com
summary = Simple library for serving models
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/aiwizo/karlovic
project_urls =
    Source Code = https://github.com/aiwizo/karlovic
    Bug Tracker = https://github.com/aiwizo/karlovic/issues
license = Apache-2
license_files = LICENSE
platforms =
    Linux
    Darwin
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    api
    server
    machine
    learning

[files]

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[options]
python_requires = >=3.6, <3.9
setup_requires =
    setuptools

[bdist_wheel]

[build_sphinx]
builders = html
source-dir = docs/source
build-dir = docs/build
all-files = 1
